[gd_scene load_steps=4 format=3 uid="uid://cmrq4568hj2cl"]

[ext_resource type="Script" uid="uid://buol7e3tsyytm" path="res://Scripts/Login/account_management.gd" id="1_yr52k"]
[ext_resource type="FontFile" uid="uid://8qixsdylbpdo" path="res://Assets/fonts/PixelOperator8-Bold.ttf" id="2_vjpih"]

[sub_resource type="Theme" id="Theme_yr52k"]
default_font = ExtResource("2_vjpih")
default_font_size = 40

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yr52k")
metadata/_edit_vertical_guides_ = [960.0]

[node name="PopupMenu" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -356.0
offset_top = -346.0
offset_right = 373.0
offset_bottom = 370.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PopupMenu"]
layout_mode = 2

[node name="UserLabel" type="Label" parent="PopupMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vjpih")
theme_override_font_sizes/font_size = 24
text = "Username"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RemoveAccount" type="Button" parent="PopupMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vjpih")
theme_override_font_sizes/font_size = 24
text = "Delete Account"

[node name="Logout" type="Button" parent="PopupMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vjpih")
theme_override_font_sizes/font_size = 24
text = "Logout"

[node name="BackMainMenu" type="Button" parent="PopupMenu/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("2_vjpih")
theme_override_font_sizes/font_size = 24
text = "Back To Main Menu"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
oversampling_override = 1.0
mode = 3
title = "Cancellazione Account"
initial_position = 1
size = Vector2i(800, 316)
max_size = Vector2i(800, 500)
theme = SubResource("Theme_yr52k")
dialog_text = "Sei sicuro di voler eliminare il tuo account? Questa azione Ã¨ irreversibile."
dialog_autowrap = true

[connection signal="pressed" from="PopupMenu/VBoxContainer/RemoveAccount" to="." method="_on_remove_account_pressed"]
[connection signal="pressed" from="PopupMenu/VBoxContainer/Logout" to="." method="_on_logout_pressed"]
[connection signal="pressed" from="PopupMenu/VBoxContainer/BackMainMenu" to="." method="_on_back_main_menu_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_confirmation_dialog_confirmed"]
